--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -24,5 +24,6 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/i18n/README.md",
   "devDependencies": {
     "typescript": "~3.0.1"
-  }
+  },
+  "sideEffects": false
 }
