--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/i18n/README.md",
   "engines": {
-    "node": ">=14.18.0"
+    "node": ">=^14.17.0 || >=16.0.0"
   },
   "sideEffects": false,
   "files": [
